--- a/ICT4Events/LoginFormStart.resx
+++ b/ICT4Events/LoginFormStart.resx
@@ -460,4 +460,7 @@
         o6Genp6bnJqamZmXl5SSlZCQjo6MiouJiYGIeHx1h3l0dnFxbXJoaGpmZnJtWUEuHxoYExEQEBEREQ==
 </value>
   </data>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
