--- a/ICT4Events/Properties/Resources.resx
+++ b/ICT4Events/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Camping_ReeënDal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Camping_ReeënDal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  </root>
+  <data name="logo transparant" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo transparant1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+</root>
